--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ env:
   - MRUBY_REPO=https://github.com/mruby/mruby.git MRUBY_BRANCH=master
   - MRUBY_REPO=https://bitbucket.org/monami_ya_mrb/monami-ya.mrb.git MRUBY_BRANCH=master
   - MRUBY_REPO=https://bitbucket.org/monami_ya_mrb/monami-ya.mrb.git MRUBY_BRANCH=develop
-
 script:
-  - "ruby run_test.rb all test"
-
+- ruby run_test.rb all test
 branches:
   except:
-    - support/original
+  - support/original
+notifications:
+  hipchat:
+    rooms:
+      secure: XbhNImAHraMFpTdUvlETCo3fpy0kPDDh6m1N8Xnn8Xo80lk+MLedu9oV8JzbI4QDEY+iaN4cUn/p1YFmmD7tgnxELH2pgQQKOvLlI02x7qy/H4tVslBbXpk9QfFdRpyqg6yqxyZFKvBgY9nTQ7RDBJflJ5nTdLpFjAQ7m8VKmw8=
